--- a/source/Kalmthout Data-Analyse.Rmd
+++ b/source/Kalmthout Data-Analyse.Rmd
@@ -712,9 +712,9 @@ create_boxplot_log_max(data_met_N_anorg, "N_anorg", vline_N_anorg, "Anorganische
 ## Boxplots pH min - max
 ```{r}
 vline_pH <- data.frame(
-  watertype = c("Aw-om", "Cb", "Czb", "Zm", "Zs"),
-  xinterceptmin = c(6.5, 5.5, 5.5, 4.5, 4.5),
-  xinterceptmax = c(8.5, 7.5, 7.5, 6.5, 6.5)
+  watertype = c("Zm", "Zs"),
+  xinterceptmin = c(4.5, 4.5),
+  xinterceptmax = c(6.5, 6.5)
 )
 
 # Calculate median values for sorting
