--- a/source/Kalmthout Data-Analyse.Rmd
+++ b/source/Kalmthout Data-Analyse.Rmd
@@ -57,12 +57,6 @@ data_KAL$AquaUnit[data_KAL$AquaUnit == "M"] <- "m"
 data_KAL$Unit[data_KAL$Unit == "M"] <- "m"
 
 
-# meetreeksen visualiseren (2023-2024 en <2020)
-data_KAL %>%
-  ggplot(aes(x = FieldSamplingDate, y = codeplas)) +
-  geom_point(size = 1) +
-  scale_x_date(date_breaks = "1 year", date_labels = "%Y")
-
 #habitattype <- data_KAL %>%
 #  select(codeplas, HabtypeVel) %>%
 #  unique() %>%
@@ -86,12 +80,6 @@ data_KAL <- data_KAL %>%
            format(FieldSamplingDate, "%m")) %in% c(4:9) ~ "zomer",
            TRUE ~ "winter"))
 
-
-# meetreeksen
-data_KAL %>%
-  ggplot(aes(x = FieldSamplingDate, y = codeplas, colour = meetreeks)) +
-  geom_point(size = 1) +
-    scale_x_date(date_breaks = "1 year", date_labels = "%Y")
   
 # reeks van 2022-2024
 reeks_2022_2024 <- unique(data_KAL$codeplas[data_KAL$meetreeks == "2022-2024"])
@@ -147,8 +135,8 @@ data_met_N_anorg = subset(data_met_N_anorg, select = -c(27) )
 # verander naam naar Locatie voor functies
 colnames(data_met_N_anorg)[colnames(data_met_N_anorg) == "naam"] <- "Locatie"
 
-
-write.csv2(data_met_N_anorg, file = "./data/Data_Kalmthout_met_Nanorg.csv")
+# hernoem data met anorganische stikstof tot data_KAL (bevat zelfde data + anorganische stikstof-berekening)
+data_KAL <- data_met_N_anorg
 ```
 
 # BOXPLOTS
