--- a/source/Kalmthout Data-Analyse.Rmd
+++ b/source/Kalmthout Data-Analyse.Rmd
@@ -1028,22 +1028,24 @@ create_boxplot_basic(data_KAL, "alkaliniteit", "Alkaliniteit (meq/l)")
 create_boxplot_basiclog(data_KAL, "alkaliniteit", "Alkaliniteit (log10 meq/l)")
 ```
 
-# TIJDSREEKSEN
-## functie voor tijdsreeksen
-### voor 2020
+# functies voor tijdsreeksen
+
+## FUNCTIE: 1 variabele, meetreeks (<2020 of 2022-2024) als argument, watertype_thresholds (dataframe met watertypes en MKN-/KRW-norm) zijn optioneel
 ```{r}
-generate_plot_2020 <- function(codeplas_value, aqua_component, watertype_thresholds, y_label = NULL) {
+generate_plot <- function(codeplas_value, aqua_component, periode, y_label = NULL, watertype_thresholds = NULL) {
   filtered_data <- data_KAL %>%
-    filter(AquaComponent == aqua_component & meetreeks == "<2020" & codeplas == codeplas_value)
+    filter(AquaComponent == aqua_component & periode == meetreeks & codeplas == codeplas_value)
   
   n_results <- nrow(filtered_data)
-  interval <- if(n_results > 12) "2 months" else "1 month"
+  interval <- if (n_results > 12) "2 months" else "1 month"
   
-  watertype <- unique(filtered_data$watertype)
-  threshold <- watertype_thresholds[[watertype]] %||% NA # Use NA if not found
+  threshold <- NA
+  if (!is.null(watertype_thresholds)) {
+    watertype <- unique(filtered_data$watertype)
+    threshold <- watertype_thresholds[[watertype]] %||% NA
+  }
   
-  # If y_label is not provided, use "ResultCalc" as default
-  y_axis_label <- if(is.null(y_label)) "ResultCalc" else y_label
+  y_axis_label <- if (is.null(y_label)) "ResultCalc" else y_label
   
   plot <- filtered_data %>%
     ggplot(aes(x = FieldSamplingDate, y = ResultCalc)) +
@@ -1051,26 +1053,268 @@ generate_plot_2020 <- function(codeplas_value, aqua_component, watertype_thresho
     scale_y_continuous(breaks = pretty_breaks(n = 10)) +
     geom_line(linewidth = 1, color = "orange") +
     geom_point(color = "orange") +
-    geom_hline(yintercept = threshold, linetype = "dashed", color = "black", size = 1) +
-    labs(x = "Datum staalname",
-         y = y_axis_label) +
-  theme(
-    axis.title = element_text(size = 16),
-    axis.text = element_text(size = 14)
-  )
-    
+    labs(y = y_axis_label) +
+    theme(
+      axis.title = element_text(size = 16),
+      axis.text = element_text(size = 14),
+      axis.title.x = element_blank()
+    )
   
+  if (!is.na(threshold)) {
+    plot <- plot + geom_hline(yintercept = threshold, linetype = "dashed", color = "black", size = 1)
+  }
+    
   return(plot)
 }
 
-generate_multiple_plots_2020 <- function(codeplas_values, aqua_component, watertype_thresholds, y_label = NULL) {
-  plots <- map(codeplas_values, ~generate_plot_2020(.x, aqua_component, watertype_thresholds, y_label))
+generate_multiple_plots <- function(codeplas_values, aqua_component, periode, y_label = NULL, watertype_thresholds = NULL) {
+  plots <- map(codeplas_values, ~generate_plot(.x, aqua_component, periode, y_label, watertype_thresholds))
   names(plots) <- codeplas_values
   return(plots)
 }
 
 ```
 
+## FUNCTIE: 2 variabelen
+```{r}
+generate_plot_2 <- function(codeplas_value, aquacomponent1, aquacomponent2, periode, y_label = NULL, watertype_thresholds = NULL) {
+  filtered_data <- data_KAL %>%
+    filter((AquaComponent == aquacomponent1 | AquaComponent == aquacomponent2) & 
+           periode == meetreeks & 
+           codeplas == codeplas_value)
+  
+  n_results <- nrow(filtered_data)
+  interval <- if (n_results > 12) "2 months" else "1 month"
+  
+  threshold <- NA
+  if (!is.null(watertype_thresholds)) {
+    watertype <- unique(filtered_data$watertype)
+    threshold <- watertype_thresholds[[watertype]] %||% NA
+  }
+  
+  y_axis_label <- if (is.null(y_label)) "ResultCalc" else y_label
+  
+  plot <- filtered_data %>%
+    ggplot(aes(x = FieldSamplingDate, y = ResultCalc, color = AquaComponent)) +
+    scale_x_date(date_breaks = interval, date_labels = "%m/%y") +
+    scale_y_continuous(breaks = pretty_breaks(n = 10)) +
+    geom_line(linewidth = 1) +
+    geom_point() +
+    labs(y = y_axis_label) +
+    theme(
+      axis.title = element_text(size = 16),
+      axis.text = element_text(size = 14),
+      axis.title.x = element_blank(),
+      legend.position = "bottom"
+    )
+  
+  if (!is.na(threshold)) {
+    plot <- plot + geom_hline(yintercept = threshold, linetype = "dashed", color = "black", size = 1)
+  }
+    
+  return(plot)
+}
+
+generate_multiple_plots_2 <- function(codeplas_values, aquacomponent1, aquacomponent2, periode, y_label = NULL, watertype_thresholds = NULL) {
+  plots <- map(codeplas_values, ~generate_plot_2(.x, aquacomponent1, aquacomponent2, periode, y_label, watertype_thresholds))
+  names(plots) <- codeplas_values
+  return(plots)
+}
+
+```
+
+## FUNCTIE 2-Y-assen
+```{r}
+generate_plot_2Yaxes <- function(codeplas_value, aquacomponent1, aquacomponent2, periode, y_label1 = NULL, y_label2 = NULL, watertype_thresholds = NULL) {
+  # Filter data for both AquaComponents
+  filtered_data_1 <- data_KAL %>%
+    filter(AquaComponent == aquacomponent1 & periode == meetreeks & codeplas == codeplas_value)
+  
+  filtered_data_2 <- data_KAL %>%
+    filter(AquaComponent == aquacomponent2 & periode == meetreeks & codeplas == codeplas_value)
+  
+  # Determine intervals for x-axis
+  n_results <- max(nrow(filtered_data_1), nrow(filtered_data_2))
+  interval <- if (n_results > 12) "2 months" else "1 month"
+  
+  # Thresholds (if provided)
+  threshold1 <- threshold2 <- NA
+  if (!is.null(watertype_thresholds)) {
+    watertype1 <- unique(filtered_data_1$watertype)
+    watertype2 <- unique(filtered_data_2$watertype)
+    threshold1 <- watertype_thresholds[[watertype1]] %||% NA
+    threshold2 <- watertype_thresholds[[watertype2]] %||% NA
+  }
+  
+  # Default y-axis labels if not provided
+  y_axis_label1 <- if (is.null(y_label1)) paste("ResultCalc", aquacomponent1) else y_label1
+  y_axis_label2 <- if (is.null(y_label2)) paste("ResultCalc", aquacomponent2) else y_label2
+  
+  # Create the plot
+  plot <- ggplot() +
+    # Plot for AquaComponent 1 (primary y-axis)
+    geom_line(data = filtered_data_1, aes(x = FieldSamplingDate, y = ResultCalc), color = "blue4", linewidth = 1) +
+    geom_point(data = filtered_data_1, aes(x = FieldSamplingDate, y = ResultCalc), color = "blue4") +
+    # Plot for AquaComponent 2 (secondary y-axis)
+    geom_line(data = filtered_data_2, aes(x = FieldSamplingDate, y = ResultCalc / max(ResultCalc) * max(filtered_data_1$ResultCalc)), 
+              color = "orange3", linewidth = 1) +
+    geom_point(data = filtered_data_2, aes(x = FieldSamplingDate, y = ResultCalc / max(ResultCalc) * max(filtered_data_1$ResultCalc)), 
+               color = "orange3") +
+    # Primary y-axis
+    scale_y_continuous(
+      name = y_axis_label1,
+      breaks = pretty_breaks(n = 10),
+      sec.axis = sec_axis(~ . * max(filtered_data_2$ResultCalc) / max(filtered_data_1$ResultCalc), name = y_axis_label2)
+    ) +
+    # X-axis formatting
+    scale_x_date(date_breaks = interval, date_labels = "%m/%y") +
+    labs(x = NULL) +
+    theme(
+      axis.title.y.left = element_text(color = "blue4", size = 16),
+      axis.title.y.right = element_text(color = "orange3", size = 16),
+      axis.text.x = element_text(size = 14),
+      axis.text.y.left = element_text(color = "blue4", size = 14),
+      axis.text.y.right = element_text(color = "orange3", size = 14),
+      legend.position = "none"
+    )
+  
+  # Add thresholds if provided
+  if (!is.na(threshold1)) {
+    plot <- plot + geom_hline(yintercept = threshold1, linetype = "dashed", color = "blue4", size = 0.8)
+  }
+  
+  if (!is.na(threshold2)) {
+    plot <- plot + geom_hline(yintercept = threshold2 / max(filtered_data_2$ResultCalc) * max(filtered_data_1$ResultCalc), 
+                              linetype = "dashed", color = "orange3", size = 0.8)
+  }
+  
+  return(plot)
+}
+
+generate_multiple_plots_2Yaxes <- function(codeplas_values, aquacomponent1, aquacomponent2, periode, y_label1 = NULL, y_label2 = NULL, watertype_thresholds = NULL) {
+  plots <- map(codeplas_values, ~generate_plot_2Yaxes(.x, aquacomponent1, aquacomponent2, periode, y_label1, y_label2, watertype_thresholds))
+  names(plots) <- codeplas_values
+  return(plots)
+}
+```
+
+## FUNCTIE 2+ variabelen geom_area
+```{r}
+generate_plot_multi <- function(codeplas_value, aqua_components, periode, y_label = NULL) {
+  # Filter data for all AquaComponents in the list
+  filtered_data <- data_KAL %>%
+    filter(AquaComponent %in% aqua_components & periode == meetreeks & codeplas == codeplas_value)
+  
+  n_results <- nrow(filtered_data)
+  interval <- if (n_results > 12) "2 months" else "1 month"
+  
+  # Default y-axis label
+  y_axis_label <- if (is.null(y_label)) "ResultCalc" else y_label
+  
+  # Create the plot
+  plot <- ggplot(filtered_data, aes(x = FieldSamplingDate, y = ResultCalc, fill = AquaComponent)) +
+    geom_area(alpha = 0.6, position = "identity", color = "black") +
+    scale_x_date(date_breaks = interval, date_labels = "%m/%y") +
+    scale_y_continuous(breaks = pretty_breaks(n = 10)) +
+    scale_fill_brewer(palette = "Set2") +
+    labs(y = y_axis_label, fill = "AquaComponent") +
+    theme(
+      axis.title = element_text(size = 16),
+      axis.text = element_text(size = 14),
+      axis.title.x = element_blank(),
+      legend.position = "bottom"
+    )
+  
+  return(plot)
+}
+
+generate_multiple_plots_multi <- function(codeplas_values, aqua_components, periode, y_label = NULL) {
+  plots <- map(codeplas_values, ~generate_plot_multi(.x, aqua_components, periode, y_label))
+  names(plots) <- codeplas_values
+  return(plots)
+}
+
+
+plot_test <- generate_multiple_plots_multi(reeks_2020, c("NH4_N", "NO3_N", "NO2_N", "N_anorg"), "<2020", "mg N/l")
+walk2(plot_test, names(plot_test),
+      ~ggsave(filename = paste0("./test/N_multi/", .y, "_", "N_multi", ".png"), plot = .x, width = 10, height = 6))
+
+```
+
+## FUNCTIE onder- en bovengrens
+```{r}
+generate_plot_minmax <- function(codeplas_value, aqua_component, periode, grenswaarden_pH, y_label = NULL) {
+  # Filter data
+  filtered_data <- data_KAL %>%
+    filter(AquaComponent == aqua_component & periode == meetreeks & codeplas == codeplas_value)
+  
+  n_results <- nrow(filtered_data)
+  interval <- if (n_results > 12) "2 months" else "1 month"
+  
+  # Determine watertype and corresponding pH thresholds
+  watertype <- unique(filtered_data$watertype)
+  min_threshold <- NA
+  max_threshold <- NA
+  if (length(watertype) == 1 && watertype %in% names(grenswaarden_pH)) {
+    min_threshold <- grenswaarden_pH[[watertype]]$min
+    max_threshold <- grenswaarden_pH[[watertype]]$max
+  }
+  
+  # Default y-axis label
+  y_axis_label <- if (is.null(y_label)) "ResultCalc" else y_label
+  
+  # Create the plot
+  plot <- filtered_data %>%
+    ggplot(aes(x = FieldSamplingDate, y = ResultCalc)) +
+    geom_line(linewidth = 1, color = "orange") +
+    geom_point(color = "orange") +
+    scale_x_date(date_breaks = interval, date_labels = "%m/%y") +
+    scale_y_continuous(breaks = pretty_breaks(n = 10)) +
+    labs(y = y_axis_label) +
+    theme(
+      axis.title = element_text(size = 16),
+      axis.text = element_text(size = 14),
+      axis.title.x = element_blank()
+    )
+  
+  # Add horizontal lines for min and max thresholds if they exist
+  if (!is.na(min_threshold)) {
+    plot <- plot + 
+      geom_hline(yintercept = min_threshold, linetype = "dashed", color = "black", size = 1)
+  }
+  
+  if (!is.na(max_threshold)) {
+    plot <- plot + 
+      geom_hline(yintercept = max_threshold, linetype = "dashed", color = "black", size = 1)
+  }
+  
+  return(plot)
+}
+
+generate_multiple_plots_minmax <- function(codeplas_values, aqua_component, periode, grenswaarden_pH, y_label = NULL) {
+  plots <- map(codeplas_values, ~generate_plot_minmax(.x, aqua_component, periode, grenswaarden_pH, y_label))
+  names(plots) <- codeplas_values
+  return(plots)
+}
+
+
+
+# pH thresholds
+grenswaarden_pH <- list(
+  "Aw-om" = list(min = 6.5, max = 8.5),
+  "Cb" = list(min = 6.5, max = 8.5),
+  "Czb" = list(min = 6.5, max = 8.5),
+  "Zm" = list(min = 5.5, max = 8.5),
+  "Zs" = list(min = 5.5, max = 8.5)
+)
+
+plots_pH <- generate_multiple_plots_minmax(reeks_2020, "pH_veld", "<2020", grenswaarden_pH, "pH")
+walk2(plots_pH, names(plots_pH),
+      ~ggsave(filename = paste0("./exports/pH/", .y, "_", "pH", ".png"), plot = .x, width = 10, height = 6))
+```
+
+
+# FIGUREN < 2020
 ```{r}
 # Chloride
 grenswaarden_Cl <- list(
@@ -1078,243 +1322,30 @@ grenswaarden_Cl <- list(
   "Zs" = 20
 )
 
-plots_Cl2020 <- generate_multiple_plots_2020(reeks_2020, "Cl", grenswaarden_Cl, "Chloride (mg/l)")
+plots_Cl2020 <- generate_multiple_plots(reeks_2020, "Cl", "<2020", y_label = "Chloride (mg/l)", watertype_thresholds = grenswaarden_Cl)
 walk2(plots_Cl2020, names(plots_Cl2020),
       ~ggsave(filename = paste0("./exports/Chloride2020/", .y, "_", "Cl2020", ".png"), plot = .x, width = 10, height = 6))
 
+
 ```
 
-### voor 2024
+# FIGUREN 2022-2024
 ```{r}
-generate_plot <- function(codeplas_value, aqua_component, watertype_thresholds, y_label = NULL) {
-  filtered_data <- data_KAL %>%
-    filter(AquaComponent == aqua_component & meetreeks == "2022-2024" & codeplas == codeplas_value)
-  
-  n_results <- nrow(filtered_data)
-  interval <- if(n_results > 12) "2 months" else "1 month"
-  
-  watertype <- unique(filtered_data$watertype)
-  threshold <- watertype_thresholds[[watertype]] %||% NA # Use NA if not found
-  
-  # If y_label is not provided, use "ResultCalc" as default
-  y_axis_label <- if(is.null(y_label)) "ResultCalc" else y_label
-  
-  plot <- filtered_data %>%
-    ggplot(aes(x = FieldSamplingDate, y = ResultCalc)) +
-    scale_x_date(date_breaks = interval, date_labels = "%m/%y") +
-    scale_y_continuous(breaks = pretty_breaks(n = 10)) +
-    geom_line(linewidth = 1, color = "orange") +
-    geom_point(color = "orange") +
-    geom_hline(yintercept = threshold, linetype = "dashed", color = "black", size = 1) +
-    labs(x = "Datum staalname",
-         y = y_axis_label) +
-  theme(
-    axis.title = element_text(size = 16),
-    axis.text = element_text(size = 14)
-  )
-    
-  
-  return(plot)
-}
+# pH thresholds
+grenswaarden_pH <- list(
+  "Aw-om" = list(min = 6.5, max = 8.5),
+  "Cb" = list(min = 6.5, max = 8.5),
+  "Czb" = list(min = 6.5, max = 8.5),
+  "Zm" = list(min = 5.5, max = 8.5),
+  "Zs" = list(min = 5.5, max = 8.5)
+)
 
-generate_multiple_plots <- function(codeplas_values, aqua_component, watertype_thresholds, y_label = NULL) {
-  plots <- map(codeplas_values, ~generate_plot(.x, aqua_component, watertype_thresholds, y_label))
-  names(plots) <- codeplas_values
-  return(plots)
-}
-
+plots_pH <- generate_multiple_plots(reeks_2022_2024, "pH_veld", grenswaarden_pH, "pH")
+walk2(plots_pH, names(plots_pH),
+      ~ggsave(filename = paste0("./exports/pH/", .y, "_", "pH", ".png"), plot = .x, width = 10, height = 6))
 ```
 
 
-#### functie voor tijdsreeksen zonder grenswaarde
-```{r}
-generate_plot_nohline <- function(codeplas_value, aqua_component, y_label = NULL) {
-  filtered_data <- data_KAL %>%
-    filter(AquaComponent == aqua_component & meetreeks == "2022-2024" & codeplas == codeplas_value)
-  
-  n_results <- nrow(filtered_data)
-  interval <- if(n_results > 12) "2 months" else "1 month"
-  
-  # If y_label is not provided, use "ResultCalc" as default
-  y_axis_label <- if(is.null(y_label)) "ResultCalc" else y_label
-  
-  plot <- filtered_data %>%
-    ggplot(aes(x = FieldSamplingDate, y = ResultCalc)) +
-    scale_x_date(date_breaks = interval, date_labels = "%m/%y") +
-    scale_y_continuous(breaks = pretty_breaks(n = 10)) +
-    geom_line(linewidth = 1, color = "orange") +
-    geom_point(color = "orange") +
-    labs(x = "Datum staalname",
-         y = y_axis_label) +
-  theme(
-    axis.title = element_text(size = 16),
-    axis.text = element_text(size = 14)
-  )
-    
-  
-  return(plot)
-}
-
-generate_multiple_plots_nohline <- function(codeplas_values, aqua_component, y_label = NULL) {
-  plots <- map(codeplas_values, ~generate_plot_nohline(.x, aqua_component, y_label))
-  names(plots) <- codeplas_values
-  return(plots)
-}
-
-```
-
-#### code voor 2 variabelen te plotten (vb WD en SD, ZS105 en ZS550)
-```{r}
-generate_plot_2 <- function(codeplas_value, aqua_component1, aqua_component2, watertype_thresholds, y_label = NULL) {
-  filtered_data1 <- data_KAL %>%
-    filter(AquaComponent == aqua_component1 & meetreeks == "2022-2024" & codeplas == codeplas_value)
-  
-  filtered_data2 <- data_KAL %>%
-    filter(AquaComponent == aqua_component2 & meetreeks == "2022-2024" & codeplas == codeplas_value)
-  
-  n_results <- max(nrow(filtered_data1), nrow(filtered_data2))
-  interval <- if(n_results > 12) "2 months" else "1 month"
-  
-  watertype <- unique(filtered_data1$watertype)
-  threshold <- watertype_thresholds[[watertype]] %||% NA # Use NA if not found
-  
-  # If y_label is not provided, use "ResultCalc" as default
-  y_axis_label <- if(is.null(y_label)) "ResultCalc" else y_label
-  
-  plot <- ggplot() +
-    geom_line(data = filtered_data1, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component1), linewidth = 1) +
-    geom_point(data = filtered_data1, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component1)) +
-    geom_line(data = filtered_data2, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component2), linewidth = 1) +
-    geom_point(data = filtered_data2, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component2)) +
-    scale_x_date(date_breaks = interval, date_labels = "%m/%y") +
-    scale_y_continuous(breaks = pretty_breaks(n = 10)) +
-    geom_hline(yintercept = threshold, linetype = "dashed", color = "black", size = 1) +
-    labs(x = "Datum staalname",
-         y = y_axis_label,
-         color = "AquaComponent") +
-    theme(
-      axis.title = element_text(size = 16),
-      axis.text = element_text(size = 14),
-      legend.title = element_text(size = 16),
-      legend.text = element_text(size = 14)
-    )
-  
-  return(plot)
-}
-
-generate_multiple_plots_2 <- function(codeplas_values, aqua_component1, aqua_component2, watertype_thresholds, y_label = NULL) {
-  plots <- map(codeplas_values, ~generate_plot_2(.x, aqua_component1, aqua_component2, watertype_thresholds, y_label))
-  names(plots) <- codeplas_values
-  return(plots)
-}
-
-# zonder normgrenzen
-generate_plot_2_nohline <- function(codeplas_value, aqua_component1, aqua_component2, y_label = NULL) {
-  filtered_data1 <- data_KAL %>%
-    filter(AquaComponent == aqua_component1 & meetreeks == "2022-2024" & codeplas == codeplas_value)
-  
-  filtered_data2 <- data_KAL %>%
-    filter(AquaComponent == aqua_component2 & meetreeks == "2022-2024" & codeplas == codeplas_value)
-  
-  n_results <- max(nrow(filtered_data1), nrow(filtered_data2))
-  interval <- if(n_results > 12) "2 months" else "1 month"
-  
-  # If y_label is not provided, use "ResultCalc" as default
-  y_axis_label <- if(is.null(y_label)) "ResultCalc" else y_label
-  
-  plot <- ggplot() +
-    geom_line(data = filtered_data1, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component1), linewidth = 1) +
-    geom_point(data = filtered_data1, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component1)) +
-    geom_line(data = filtered_data2, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component2), linewidth = 1) +
-    geom_point(data = filtered_data2, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component2)) +
-    scale_x_date(date_breaks = interval, date_labels = "%m/%y") +
-    scale_y_continuous(breaks = pretty_breaks(n = 10)) +
-    labs(x = "Datum staalname",
-         y = y_axis_label,
-         color = "AquaComponent") +
-    theme(
-      axis.title = element_text(size = 16),
-      axis.text = element_text(size = 14),
-      legend.title = element_text(size = 16),
-      legend.text = element_text(size = 14)
-    )
-  
-  return(plot)
-}
-
-generate_multiple_plots_2_nohline <- function(codeplas_values, aqua_component1, aqua_component2, y_label = NULL) {
-  plots <- map(codeplas_values, ~generate_plot_2_nohline(.x, aqua_component1, aqua_component2, y_label))
-  names(plots) <- codeplas_values
-  return(plots)
-}
-```
-
-#### functie tijdsreeks met 2 variabelen op 1 figuur
-```{r}
-generate_plot_two_components <- function(codeplas_value, aqua_component1, aqua_component2, y_label1 = NULL, y_label2 = NULL) {
-  filtered_data1 <- data_KAL %>%
-    filter(AquaComponent == aqua_component1 & meetreeks == "2022-2024" & codeplas == codeplas_value)
-  
-  filtered_data2 <- data_KAL %>%
-    filter(AquaComponent == aqua_component2 & meetreeks == "2022-2024" & codeplas == codeplas_value)
-  
-  n_results <- max(nrow(filtered_data1), nrow(filtered_data2))
-  interval <- if(n_results > 12) "2 months" else "1 month"
-  
-  y_axis_label1 <- if(is.null(y_label1)) paste("ResultCalc", aqua_component1) else y_label1
-  y_axis_label2 <- if(is.null(y_label2)) paste("ResultCalc", aqua_component2) else y_label2
-  
-  # Calculate the scaling factor
-  scale_factor <- max(filtered_data2$ResultCalc, na.rm = TRUE) / max(filtered_data1$ResultCalc, na.rm = TRUE)
-  
-  plot <- ggplot() +
-    geom_line(data = filtered_data1, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component1), linewidth = 1) +
-    geom_point(data = filtered_data1, aes(x = FieldSamplingDate, y = ResultCalc, color = aqua_component1)) +
-    geom_line(data = filtered_data2, aes(x = FieldSamplingDate, y = ResultCalc / scale_factor, color = aqua_component2), linewidth = 1) +
-    geom_point(data = filtered_data2, aes(x = FieldSamplingDate, y = ResultCalc / scale_factor, color = aqua_component2)) +
-    scale_x_date(date_breaks = interval, date_labels = "%m/%y") +
-    scale_y_continuous(name = y_axis_label1, 
-                       sec.axis = sec_axis(~. * scale_factor, name = y_axis_label2)) +
-    scale_color_manual(values = c("orange", "blue4")) +
-    labs(x = "Datum staalname",
-         color = "AquaComponent") +
-    theme(
-      legend.position = "none",
-      axis.title = element_text(size = 16),
-      axis.text = element_text(size = 14),
-      axis.title.y.left = element_text(color = "orange"),
-      axis.text.y.left = element_text(color = "orange"),
-      axis.title.y.right = element_text(color = "blue4"),
-      axis.text.y.right = element_text(color = "blue4")
-    )
-  
-  return(plot)
-}
-
-generate_multiple_plots_two_components <- function(codeplas_values, aqua_component1, aqua_component2, y_label1 = NULL, y_label2 = NULL) {
-  plots <- map(codeplas_values, ~generate_plot_two_components(.x, aqua_component1, aqua_component2, y_label1, y_label2))
-  names(plots) <- codeplas_values
-  return(plots)
-}
-
-
-```
-
-#### tijdreeksen 2 variabelen
-```{r}
-# Zuurtegraad en absorptie
-plots_pH_abs <- generate_multiple_plots_two_components(reeks_2022_2024, "pH_veld", "absorptie_440", "Zuurtegraad - pH", "Absorptie (440nm ABS)")
-walk2(plots_pH_abs, names(plots_pH_abs),
-      ~ggsave(filename = paste0("./exports/pH_abs/", .y, "_", "pH_abs", ".png"), plot = .x, width = 10, height = 6))
-
-
-
-# chlorofyl_a en absorptie
-plots_chla_abs <- generate_multiple_plots_two_components(reeks_2022_2024, "chl_a", "absorptie_440", "Chlorofyl-a (µg/l)", "Absorptie (440nm ABS)")
-walk2(plots_chla_abs, names(plots_chla_abs),
-      ~ggsave(filename = paste0("./exports/chla_abs/", .y, "_", "chla_abs", ".png"), plot = .x, width = 10, height = 6))
-
-```
 
 
 ### tijdreeksen opstellen voor variabelen
@@ -1456,6 +1487,7 @@ walk2(plots_PO4_P, names(plots_PO4_P),
 
 
 ```
+
 
 ## aparte code voor zuurtegraad (onder en bovengrenzen - 2 horizontale lijnen)
 ```{r}
